testsuite/tests/grammar/invalid_lexers/pattern_5.lkt
import common

lexer foo_lexer {
    Ex1 <- p"a"
    Ex2 <- p"b"
    Ex3 <- p"+"
    Ex4 <- p"c"
    Ex5 <- p"d"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
